--- a/src/components/Signup.module.css
+++ b/src/components/Signup.module.css
@@ -1,67 +1,196 @@
-.signup-section {
+.signup__section {
   grid-area: newsletter-signup;
   width: 100%;
+  margin: 5.13rem 0 7.19rem;
   background: #ECE8E1;
+}
+
+.signup__flex {
+  max-width: 1300px;
+  width: 98%;
+  margin: 0 auto;
+
   display: flex;
-  justify-content: center; 
+  gap: 8rem;
+  justify-content: center;
+  align-content: space-evenly; 
   padding: 3rem 2rem;
 }
 
-.newsletter-title {
-  font-size: 30px;
-  margin-left: 50px;
-  line-height: 140%;
+.signup__wrapper {
+  width: 59%;
+  margin: auto 0;
 }
 
-.newsletter-form {
+.newsletter__title {
+  margin-left: 3.13rem;
+  line-height: 140%;
+  font-weight: normal;
+}
+
+.newsletter__general {
+  padding-bottom: .4rem;
+}
+
+.newsletter__form {
   display: grid;
-  grid-template-columns: auto auto auto;
+  gap: .5rem;
+  grid-auto-rows: minmax(min-content, max-content);
+  grid-template-columns: 30% 50% 20%;
+  grid-template-areas: "checkboxes email button";
+  justify-content: center;
+  align-items: center;
+  max-width: 46rem;
+  min-width: 43rem
 }
 
 .checkboxes {
-  grid-column: 1;
+  grid-area: checkboxes;
+  justify-self: self-end;
 }
 
 .checkboxes__list {
   list-style: none;
+  text-align: left;
+}
+
+.checkboxes__list:first-child {
+  margin-bottom: .3rem;
+}
+
+.checkboxes__label {
+  display: block;
+  font-size: 1rem;
+  padding-bottom: .2rem;
+  font-weight: bold;
 }
 
 .email {
-  grid-column: 2;
+  grid-area: email;
 }
 
-.email-wrap {
+.email__wrap {
   display: inline-block;
-  width: calc(100% - 155px);
+  justify-self: self-end;
 }
 
 .email__input {
   font-family: "Raleway","Helvetica Neue",Arial,Helvetica,Verdana,sans-serif;
-  font-size: 16px;
-  border: 3px solid #CACACA;
-  border-radius: 10px;
-  height: 50px;
+  font-size: 1rem;
+  border: 0.19rem solid #CACACA;
+  border-radius: 0.63rem;
+  height: 3.13rem;
 }
 
 .email__input--view {
   font-family: "Open Sans","Helvetica Neue",Arial,Helvetica,Verdana,sans-serif;
-  font-size: 15px;
-  border: 1px solid #ABB0B2;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
+  font-size: .98rem;
+  border: .2rem solid #ABB0B2;
+  -webkit-border-radius: 0.2rem;
+  -moz-border-radius: 0.2rem;
+  border-radius: 0.40rem;
   color: #343434;
   background-color: #fff;
   box-sizing: border-box;
-  height: 32px;
-  padding: 0px 0.4em;
+  height: 3rem;
+  padding: 0.4em;
   display: inline-block;
   margin: 0;
-  width: 350px;
-  vertical-align: top;
+  width: 21.88rem;
 }
 
-
 .button {
-  grid-column: 3;
+  grid-area: button;
+}
+
+.button__join {
+  font-size: .81rem;
+  border: none;
+  -webkit-border-radius: 0.19rem;
+  -moz-border-radius: 0.19rem;
+  border-radius: 0.19rem;
+  letter-spacing: .03em;
+  color: #fff;
+  background-color: #aaa;
+  box-sizing: border-box;
+  height: 2rem;
+  line-height: 2rem;
+  padding: 0 1.13rem;
+  display: inline-block;
+  margin: 0;
+  transition: all 0.23s ease-in-out 0s;
+}
+
+.button__join {
+  font-size: 1.13rem;
+  font-family: 'Aleo', serif;
+  font-weight: 600;
+  border-radius: 0.31rem;
+  background-color: #A8081E;
+  height: 3rem;
+}
+
+.button__join:hover, 
+.button__join:active {
+  background-color: #4e040e;
+}
+
+.info__icon {
+  width: 100%;
+  max-width: 1.25rem;
+  position: relative;
+}
+
+.newsletter__form .tooltip {
+  padding: 0;
+  background: none;
+  border: none;
+}
+
+.newsletter__form .tooltip {
+  position: relative;
+  display: inline-block;
+  opacity: 1;
+  margin-left: 5px;
+}
+/* 
+.tooltip {
+  background: #fff;
+  line-height: 16px;
+  font-size: 13px;
+} */
+
+.tooltip {
+  background: #fff;
+  padding: 15px;
+  line-height: 16px;
+  font-size: 13px;
+  border: 1px solid #aa081e;
+}
+
+.newsletter__checkbox {
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
+  gap: .3rem
+
+}
+
+.tooltip__text {
+  width: 300px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  padding: 10px;
+  border-radius: 6px;
+  top: -36px;
+  left: 140%;
+  opacity: 0;
+  transition: opacity 1s;
+  position: absolute;
+  visibility: hidden;
+}
+
+.info__label {
+  display: none
 }
