--- a/src/components/Signup.module.css
+++ b/src/components/Signup.module.css
@@ -9,23 +9,22 @@
   max-width: 1300px;
   width: 98%;
   margin: 0 auto;
-
   display: flex;
-  gap: 8rem;
+  flex-direction: column;
+  gap: 1rem;
   justify-content: center;
   align-content: space-evenly; 
   padding: 3rem 2rem;
 }
 
 .signup__wrapper {
-  width: 59%;
   margin: auto 0;
 }
 
 .newsletter__title {
-  margin-left: 3.13rem;
   line-height: 140%;
   font-weight: normal;
+  align-self: center;
 }
 
 .newsletter__general {
@@ -40,8 +39,7 @@
   grid-template-areas: "checkboxes email button";
   justify-content: center;
   align-items: center;
-  max-width: 46rem;
-  min-width: 43rem
+  width: 46rem;
 }
 
 .checkboxes {
@@ -153,12 +151,22 @@
   opacity: 1;
   margin-left: 5px;
 }
-/* 
-.tooltip {
-  background: #fff;
-  line-height: 16px;
-  font-size: 13px;
-} */
+
+@media screen and (min-width: 1092px) {
+  .signup__flex {
+    flex-direction: row;
+  }
+
+  .newsletter__title {
+    width: 13rem;
+  }
+
+  .newsletter__form {
+    max-width: 46rem;
+    min-width: 43rem;
+  }
+}
+
 
 .tooltip {
   background: #fff;
